--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,8 @@
     text-decoration: underline;
 }
 
+.selected-row {
+    background-color: rgba(0, 123, 255, 0.1); /* Підсвічування */
+    border-left: 4px solid #007bff; /* Лінія збоку для виділення */
+}
+
