--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,20 +1,24 @@
 #root {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .low-quantity {
-    color: red;
-    text-decoration: underline;
+  color: red;
+  text-decoration: underline;
 }
 
 .selected-row {
-    background-color: rgba(0, 123, 255, 0.1); /* Підсвічування */
-    border-left: 4px solid #007bff; /* Лінія збоку для виділення */
+  background-color: rgba(0, 123, 255, 0.1); /* Підсвічування */
+  border-left: 4px solid #007bff; /* Лінія збоку для виділення */
 }
 
 
-.MuiDialogContent-root>.MuiFormControl-root{
-    margin-top: 8px;
+.MuiDialogContent-root > .MuiFormControl-root {
+  margin-top: 8px;
+}
+
+.filter_container {
+  max-width: 400px;
 }
 
