--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,7 +33,7 @@
 
 
 
-.MuiMenuItem-root{
+.MuiMenuItem-root .MuiTypography-root{
   max-width: 300px;
   overflow: hidden;
   white-space: nowrap;
