--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -39,3 +39,7 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+
+.MuiPopover-paper.MuiMenu-paper .MuiMenuItem-root.Mui-selected{
+    background-color: rgba(25, 118, 210, 0.5);
+}
